Bug fixes, build is successful